apps/openconnect/openconnect.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: openconnect
  namespace: openconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      name: openconnect
  template:
    metadata:
      name: openconnect
      labels:
        name: openconnect
    spec:
      containers:
        - name: openconnect
          image: 'hmoghani/ocserv:latest'
          ports:
            - containerPort: 443
              protocol: UDP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
          - name: tls-certs
            mountPath: /etc/tls
            readOnly: true
          securityContext:
            capabilities:
              add: ["NET_ADMIN"]
            privileged: true
      volumes:
      - name: tls-certs
        secret:
          secretName: opencpnnect-secret
