apps/openconnect/openconnect-ingress.yaml
## Nginx Ingress
## Follow https://devopscube.com/setup-ingress-kubernetes-nginx-controller/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openconnect
  namespace: openconnect
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: cisco.unifiedconsulting.net
    http:
      paths:
      - backend:
          service:
            name: openconnect
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - cisco.unifiedconsulting.net
    secretName: opencpnnect-secret
